--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Welcome to FirebaseRTC!</h1>
+    <h1>Welcome to WebRTC Demo!</h1>
     <div id="buttons">
         <button class="mdc-button mdc-button--raised" id="cameraBtn">
             <i class="material-icons mdc-button__icon" aria-hidden="true">perm_camera_mic</i>
